--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# Database
+# Core dependencies
 psycopg2-binary==2.9.9
 
-# Video Processing
+# Video processing
 yt-dlp>=2023.12.0
 playwright==1.40.0
-playwright-stealth==1.0.0
+playwright-stealth==1.0.6
 
 # Web Scraping
 requests>=2.31.0
