--- a/requirements_hf.txt
+++ b/requirements_hf.txt
@@ -6,5 +6,7 @@ beautifulsoup4>=4.12.2
 lxml>=4.9.3
 tenacity>=8.2.3
 playwright>=1.40.0
-playwright-stealth>=1.0.6
+
+
 python-dotenv>=1.0.0
+psycopg2-binary>=2.9.9
